OpenH264/Widevine installation stuck at "will be installed shortly" when Temp folder inaccessible by permissions
Categories
(Core :: Audio/Video: GMP, defect)
Tracking
()
People
(Reporter: u759320, Assigned: aosmond)
References
(Blocks 1 open bug, )
Details
Attachments
(1 file)
|
27.01 KB,
image/png
|
Details |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:131.0) Gecko/20100101 Firefox/131.0
Steps to reproduce:
Go to about:addons.
Actual results:
The OpenH264 and Widevine plugins are never installed, even after turning a VPN service on and off and toggling DRM in the Firefox settings.
Expected results:
Firefox should show a clear error message when it isn't possible to install these plugins.
| Assignee | ||
Comment 1•1 year ago
|
||
Could you provide your about:support? The media.gmp-gmpopenh264.* prefs are the most interesting to me. Thanks!
| Assignee | ||
Comment 2•1 year ago
|
||
Also, if you are willing, could you please:
- Create/set the pref
media.gmp.log.levelas an integer, and set it to5. - Restart Firefox.
- Go to the menu drop down, More Tools, and select Browser Console.
- With that open, go to about:addons, press the gear icon in the upper right hand corner of the page, and select Check For Updates.
- Wait a few seconds, copy the output in the Browser Console, and attach it to this bug.
Thanks!
I had created this issue for a Reddit user expecting him to open the link, but he didn't and then managed to figure out how to solve this:
I was finally able to solve it, the problem that all permissions were removed in the "temp" folder so really thank you very much for the help!
Comment 4•1 year ago
|
||
Reopening for another "user report" in https://bugzilla.mozilla.org/show_bug.cgi?id=1900521#c10, it looks like if the temp folder permissions are messed up, the download gets stuck in "will be installed shortly" instead of showing a clear error.
Updated•1 year ago
|
| Assignee | ||
Comment 5•1 year ago
|
||
We store the addon while downloading in the temporary folder:
https://searchfox.org/mozilla-central/rev/b784b4ed27d0fc41a9bbce7d666e1cfcac4778be/toolkit/mozapps/extensions/internal/ProductAddonChecker.sys.mjs#437
This maps to NS_OS_TEMP_DIR:
https://searchfox.org/mozilla-central/rev/b784b4ed27d0fc41a9bbce7d666e1cfcac4778be/dom/system/PathUtils.h#253
Which in turn maps to DirectoryService_OS_TemporaryDirectory:
https://searchfox.org/mozilla-central/rev/b784b4ed27d0fc41a9bbce7d666e1cfcac4778be/xpcom/io/nsDirectoryService.cpp#348
Which finally results in an actual path:
https://searchfox.org/mozilla-central/rev/b784b4ed27d0fc41a9bbce7d666e1cfcac4778be/xpcom/io/SpecialSystemDirectory.cpp#475-507
We never check the path for appropriate permissions. We just assume everywhere in the code that we have write permissions to the temporary folder. This isn't a unique problem to GMP, but it is probably the most user visible feature that gets stuck by this.
| Assignee | ||
Comment 6•1 year ago
|
||
There are multiple directory providers, one of which is able to provide the profile directory which we definitely have write access to. We could consider falling back to a different provider for an alternative temporary directory, that is <PROFILE_DIR>/tmp or something, as we know we have write access to the profile. We would have to add logic to clear this folder on startup and/or shutdown though.
Updated•1 year ago
|
| Assignee | ||
Comment 7•1 year ago
|
||
There are a few open questions:
- Should we just move the temp folder to be always in the profile? We know that is writable and generally anything that wants a temp folder wants to write to it.
- How many users are impacted? We should create a telemetry probe for this perhaps.
I imagine we are the only component getting an understandable bug report here, because the other use cases are deeper in the stack and hard to make a connection.
| Assignee | ||
Comment 8•1 year ago
|
||
Very few users have an unwritable temporary directory; our telemetry found only a handful across all platforms and release channels. We could maybe improve our error messaging in this case, but that's about it that needs to be done I think.
Updated•1 year ago
|
Description
•