Bug 1922798 - Fallback to temp folder in profile when system temp not writable.